# advent-of-code-2024

./: Cargo.toml  Makefile
day-01/: Cargo.toml
day-01/solver/: Cargo.toml
day-01/solver/src/: bindings.rs  lib.rs
day-01/solver/wit/: world.wit
day-01/src/: main.rs
day-02/: Cargo.toml
day-02/src/: main.rs
day01/parser/: Cargo.toml
day01/parser/src/: bindings.rs  lib.rs
day01/parser/wit/: world.wit
day01/solver/: Cargo.toml
day01/solver/src/: bindings.rs  lib.rs
day01/solver/wit/: world.wit
day01/wit/: shared.wit
day02/parser/: Cargo.toml
day02/parser/src/: bindings.rs  lib.rs
day02/parser/wit/: world.wit
day02/solver/: Cargo.toml
day02/solver/src/: bindings.rs  lib.rs
day02/solver/wit/: world.wit
day02/wit/: shared.wit
day03/parser/: Cargo.toml
day03/parser/src/: bindings.rs  lib.rs
day03/parser/wit/: world.wit
day03/solver/: Cargo.toml
day03/solver/src/: bindings.rs  lib.rs
day03/solver/wit/: world.wit
day03/wit/: shared.wit
day04/parser/: Cargo.toml
day04/parser/src/: bindings.rs  lib.rs
day04/parser/wit/: world.wit
day04/solver/: Cargo.toml
day04/solver/src/: bindings.rs  lib.rs
day04/solver/wit/: world.wit
day04/wit/: shared.wit
day05/parser/: Cargo.toml
day05/parser/src/: bindings.rs  lib.rs
day05/parser/wit/: world.wit
day05/solver/: Cargo.toml
day05/solver/src/: bindings.rs  lib.rs
day05/solver/wit/: world.wit
day05/wit/: shared.wit
day06/parser/: Cargo.toml
day06/parser/src/: bindings.rs  lib.rs
day06/parser/wit/: world.wit
day06/solver/: Cargo.toml
day06/solver/src/: bindings.rs  lib.rs
day06/solver/wit/: world.wit
day06/wit/: shared.wit
day07/parser/: Cargo.toml
day07/parser/src/: bindings.rs  lib.rs
day07/parser/wit/: world.wit
day07/solver/: Cargo.toml
day07/solver/src/: bindings.rs  lib.rs
day07/solver/wit/: world.wit
day07/wit/: shared.wit
day08/parser/: Cargo.toml
day08/parser/src/: bindings.rs  lib.rs
day08/parser/wit/: world.wit
day08/solver/: Cargo.toml
day08/solver/src/: bindings.rs  lib.rs
day08/solver/wit/: world.wit
day08/wit/: shared.wit
day09/parser/: Cargo.toml
day09/parser/src/: bindings.rs  lib.rs
day09/parser/wit/: world.wit
day09/solver/: Cargo.toml
day09/solver/src/: bindings.rs  lib.rs
day09/solver/wit/: world.wit
day09/wit/: shared.wit
day10/map/: Cargo.toml
day10/map/src/: bindings.rs  lib.rs
day10/map/wit/: world.wit
day10/parser/: Cargo.toml
day10/parser/src/: bindings.rs  lib.rs
day10/parser/wit/: world.wit
day10/solver/: Cargo.toml
day10/solver/src/: bindings.rs  lib.rs
day10/solver/wit/: world.wit
day10/wit/: shared.wit
day11/parser/: Cargo.toml
day11/parser/src/: bindings.rs  lib.rs
day11/parser/wit/: world.wit
day11/solver/: Cargo.toml
day11/solver/src/: bindings.rs  lib.rs
day11/solver/wit/: world.wit
day11/wit/: shared.wit
day12/parser/: Cargo.toml
day12/parser/src/: bindings.rs  lib.rs
day12/parser/wit/: world.wit
day12/solver/: Cargo.toml
day12/solver/src/: bindings.rs  lib.rs
day12/solver/wit/: world.wit
day12/wit/: shared.wit
day13/parser/: Cargo.toml
day13/parser/src/: bindings.rs  lib.rs
day13/parser/wit/: world.wit
day13/solver/: Cargo.toml
day13/solver/src/: bindings.rs  lib.rs
day13/solver/wit/: world.wit
day13/wit/: shared.wit
day14/parser/: Cargo.toml
day14/parser/src/: bindings.rs  lib.rs
day14/parser/wit/: world.wit
day14/solver/: Cargo.toml
day14/solver/src/: bindings.rs  lib.rs
day14/solver/wit/: world.wit
day14/wit/: shared.wit
day15/parser/: Cargo.toml
day15/parser/src/: bindings.rs  lib.rs
day15/parser/wit/: world.wit
day15/solver/: Cargo.toml
day15/solver/src/: bindings.rs  lib.rs
day15/solver/wit/: world.wit
day15/wit/: shared.wit
day16/parser/: Cargo.toml
day16/parser/src/: bindings.rs  lib.rs
day16/parser/wit/: world.wit
day16/solver/: Cargo.toml
day16/solver/src/: bindings.rs  lib.rs
day16/wit/: shared.wit
day17/parser/: Cargo.toml
day17/solver/: Cargo.toml
day17/wit/: shared.wit
runner/: Cargo.toml
runner/src/: main.rs
wit/: aoc.wit
(+7 files in other folders)
