[workspace]
resolver = "2"
members = [
    "runner",
    "day01/solver",
    "day01/parser",
    "day02/solver",
    "day02/parser",
    "day03/solver",
    "day03/parser",
    "day04/solver",
    "day04/parser",
]

[workspace.dependencies]
anyhow = "1.0.93"
wasmtime = { version = "27.0.0", features = ["component-model", "gc"] }

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true