[workspace]
resolver = "2"
members = [
    "runner",
    "day01/solver",
    "day01/parser",
    "day02/solver",
    "day02/parser",
    "day03/solver",
    "day03/parser",
    "day04/solver",
    "day04/parser",
    "day05/solver",
    "day05/parser",
    "day06/solver",
    "day06/parser",
    "day07/solver",
    "day07/parser",
    "day08/solver",
    "day08/parser",
    "day09/solver",
    "day09/parser",
    "day10/solver",
    "day10/parser",
    "day11/solver",
    "day11/parser",
    "day12/solver",
    "day12/parser",
    "day13/solver",
    "day13/parser",
    "day14/solver",
    "day14/parser",
]

[workspace.dependencies]
anyhow = "1.0.93"
wasmtime = { version = "27.0.0", features = ["component-model", "gc"] }

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true