[package]
name = "day01_solver"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.36.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "aoc2024:day01-solver"

[package.metadata.component.target.dependencies]
"aoc2024:day01" = { path = "../wit" }